--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - wget -O - http://s3-us-west-2.amazonaws.com/build.elasticsearch.org/origin/master/nightly/JDK6/elasticsearch-latest-SNAPSHOT.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1
   - /tmp/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-transport-memcached/2.0.0.RC1
   - /tmp/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-transport-thrift/2.0.0.RC1
+  - /tmp/elasticsearch/bin/plugin -install com.github.kzwang/elasticsearch-transport-redis/2.0.0.RC2
   - git clone https://github.com/elasticsearch/elasticsearch.git ../elasticsearch
   - pip install coveralls
   - pip install .
