Attempt to force Travis CI to Java 8
For more info:
https://github.com/travis-ci/travis-ci/issues/6371#issuecomment-235755718

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
+sudo: required
+dist: trusty
 language: python
-
-sudo: false
 
 python:
   - "2.6"
@@ -9,8 +9,8 @@ python:
   - "3.4"
   - "3.5"
 
-jdk:
-  - "oraclejdk8"
+before_install:
+  - jdk_switcher use oraclejdk8
 
 env:
   # different connection classes to test
