--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ env:
   - TEST_ES_CONNECTION=RequestsHttpConnection
 
 install:
+  - sudo apt-get update
+  - sudo apt-get install python-software-properties
+  - sudo add-apt-repository -y -u ppa:openjdk-r/ppa
   - sudo apt-get install -y openjdk-8-jdk
   - wget -O /tmp/es-snap.zip "https://oss.sonatype.org/service/local/artifact/maven/redirect?r=snapshots&g=org.elasticsearch.distribution.zip&a=elasticsearch&e=zip&v=5.1.0-SNAPSHOT"
   - unzip /tmp/es-snap.zip -d /tmp/
