--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ env:
 install:
   - sudo apt-get update
   - sudo apt-get install python-software-properties
-  - sudo add-apt-repository -y -u ppa:openjdk-r/ppa
+  - sudo add-apt-repository -y ppa:openjdk-r/ppa
+  - sudo apt-get update
   - sudo apt-get install -y openjdk-8-jdk
   - wget -O /tmp/es-snap.zip "https://oss.sonatype.org/service/local/artifact/maven/redirect?r=snapshots&g=org.elasticsearch.distribution.zip&a=elasticsearch&e=zip&v=5.1.0-SNAPSHOT"
   - unzip /tmp/es-snap.zip -d /tmp/
