twiddle JAVA_HOME and PATH for elasticsearch startup script, see #483

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ install:
   - sudo apt-get install -y openjdk-8-jdk
   - sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
   - sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
+  - export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+  - export PATH=/usr/lib/jvm/java-8-openjdk-amd64/bin:$PATH
   - wget -O /tmp/es-snap.zip "https://oss.sonatype.org/service/local/artifact/maven/redirect?r=snapshots&g=org.elasticsearch.distribution.zip&a=elasticsearch&e=zip&v=5.1.0-SNAPSHOT"
   - unzip /tmp/es-snap.zip -d /tmp/
   - mv /tmp/elasticsearch-5.1.0-SNAPSHOT /tmp/elasticsearch
