--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 test_elasticsearch/cover
 test_elasticsearch/local.py
 docs/_build
-elasticsearch.egg-info
+elasticsearch5.egg-info
 .tox
 dist
 *.egg
