--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   client:
     image: docker.elastic.co/clients/elasticsearch-py:${PYTHON_VERSION:-3}
     build:
-      context: ..
-      dockerfile: ../Dockerfile
+      context: .
+      dockerfile: ./Dockerfile
       args:
           PYTHON_VERSION: ${PYTHON_VERSION:-3}
     environment:
       - "TEST_ES_SERVER=http://elasticsearch:9200"
     volumes:
-      - ..:/code/elasticsearch-py
+      - .:/code/elasticsearch-py
       - esvol:/tmp
     networks:
       - esnet
