--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - elasticsearch
     command: ["true"]  # dummy command to override the command in the Dockerfile and do nothing.
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:${ELASTIC_VERSION:-6.2.4}
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:${ELASTICSEARCH_VERSION:-6.2.4}
     volumes:
       - esvol:/tmp
     networks:
