Add linting and docs to GitHub Actions CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = pypy,py26,py27,py33,py34,py35,py36
+envlist = pypy,py26,py27,py33,py34,py35,py36,py37,py38,lint,docs
+
 [testenv]
 whitelist_externals = git
 setenv =
@@ -7,3 +8,27 @@ setenv =
 commands =
     git submodule init
     python setup.py test
+
+[testenv:lint]
+deps =
+    flake8
+    black
+commands =
+    black --target-version=py27 \
+        elasticsearch6/ \
+        test_elasticsearch/ \
+        setup.py
+    black --target-version=py27 --check \
+        elasticsearch6/ \
+        test_elasticsearch/ \
+        setup.py
+    flake8 \
+        elasticsearch6/ \
+        test_elasticsearch/
+
+[testenv:docs]
+deps =
+    sphinx
+    sphinx-rtd-theme
+commands =
+    sphinx-build docs/ docs/_build -b html
