Generate API for ES 7.7

--- a/tox.ini
+++ b/tox.ini
@@ -7,15 +7,20 @@ setenv =
 commands =
     python setup.py test
 
-[testenv:lint]
+[testenv:blacken]
 deps =
-    flake8
     black
 commands =
     black --target-version=py27 \
         elasticsearch/ \
         test_elasticsearch/ \
         setup.py
+
+[testenv:lint]
+deps =
+    flake8
+    black
+commands =
     black --target-version=py27 --check \
         elasticsearch/ \
         test_elasticsearch/ \
