--- a/tox.ini
+++ b/tox.ini
@@ -9,15 +9,20 @@ commands =
     git submodule init
     python setup.py test
 
-[testenv:lint]
+[testenv:blacken]
 deps =
-    flake8
     black
 commands =
     black --target-version=py27 \
         elasticsearch/ \
         test_elasticsearch/ \
         setup.py
+
+[testenv:lint]
+deps =
+    flake8
+    black
+commands =
     black --target-version=py27 --check \
         elasticsearch/ \
         test_elasticsearch/ \
