Update API and license tools

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,12 @@ commands =
         elasticsearch/ \
         test_elasticsearch/ \
         setup.py
+    python utils/license_headers.py fix \
+        elasticsearch/ \
+        test_elasticsearch/ \
+        utils \
+        docs \
+        setup.py
 
 [testenv:lint]
 deps =
@@ -27,7 +33,16 @@ commands =
         setup.py
     flake8 \
         elasticsearch/ \
-        test_elasticsearch/
+        test_elasticsearch/ \
+        utils \
+        docs \
+        setup.py
+    python utils/license_headers.py check \
+        elasticsearch/ \
+        test_elasticsearch/ \
+        utils \
+        docs \
+        setup.py
 
 [testenv:docs]
 deps =
