Add examples to lint list

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ commands =
     python utils/license_headers.py fix \
         elasticsearch/ \
         test_elasticsearch/ \
+        examples/ \
         utils \
         docs \
         setup.py
