--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist = pypy,py27,py34,py35,py36,py37,py38,lint,docs
 [testenv]
 whitelist_externals = git
+deps =
+    -r dev-requirements.txt
 commands =
     python setup.py test
 
