Add documentation for async helpers and API

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
 
 [testenv:docs]
 deps =
-    sphinx
     sphinx-rtd-theme
+    -r dev-requirements.txt
 commands =
     sphinx-build docs/ docs/_build -b html
