[7.8] Switch to Pytest as default runner

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 envlist = pypy,py27,py34,py35,py36,py37,py38,lint,docs
 [testenv]
 whitelist_externals = git
-setenv =
-    NOSE_XUNIT_FILE = junit-{envname}.xml
+deps =
+    -r dev-requirements.txt
 commands =
     python setup.py test
 
@@ -46,7 +46,7 @@ commands =
 
 [testenv:docs]
 deps =
-    sphinx
     sphinx-rtd-theme
+    -r dev-requirements.txt
 commands =
     sphinx-build docs/ docs/_build -b html
