Implement run_contains for REST API Tests

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,9 @@ cython_debug/
 # Pycharm project settings
 .idea
 
+# VSCode project settings
+/.vscode
+
 # elasticsearch files
 test_elasticsearch/cover
 test_elasticsearch/local.py
