--- a/.ci/test-matrix.yml
+++ b/.ci/test-matrix.yml
@@ -1,9 +1,9 @@
-ELASTICSEARCH_VERSION:
+STACK_VERSION:
   - 7.x-SNAPSHOT
 
 TEST_SUITE:
-  - oss
-  - xpack
+  - free
+  - platinum
 
 PYTHON_VERSION:
   - 2.7
