--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,30 @@ jobs:
           python3.7 -m pip install tox
       - name: Build the docs
         run: tox -e docs
+
+  test-linux:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [2.7, 3.5, 3.6, 3.7]
+        experimental: [false]
+        include:
+          - python-version: 3.9-dev
+            experimental: true
+
+    runs-on: ubuntu-latest
+    name: test-${{ matrix.python-version }}
+    continue-on-error: ${{ matrix.experimental }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v1
+      - name: Set Up Python - ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install -r dev-requirements.txt
+      - name: Run Tests
+        run: |
+          python setup.py test
