--- a/.github/workflows/unified-release.yml
+++ b/.github/workflows/unified-release.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        stack_version: ['8.0.0-SNAPSHOT']
+        stack_version: ['7.x-SNAPSHOT']
 
     steps:
       - name: Checkout
