Upgrade dependencies for FastAPI example

--- a/examples/fastapi-apm/requirements.txt
+++ b/examples/fastapi-apm/requirements.txt
@@ -1,21 +1,19 @@
-aiohttp==3.6.2
+aiohttp==3.7.4.post0
+asgiref==3.3.4
 async-timeout==3.0.1
-attrs==19.3.0
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-elastic-apm==5.8.1
-elasticsearch[async]==7.8.0
-fastapi==0.60.1
-h11==0.9.0
-httptools==0.1.1
-idna==2.10
-multidict==4.7.6
-pydantic==1.6.1
-starlette==0.13.6
-typing-extensions==3.7.4.2
-urllib3==1.25.10
-uvicorn==0.11.7
-uvloop==0.14.0
-websockets==8.1
-yarl==1.5.0
+attrs==21.2.0
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+elastic-apm==6.2.1
+elasticsearch[async]==7.13.1
+fastapi==0.65.1
+h11==0.12.0
+idna==3.2
+multidict==5.1.0
+pydantic==1.8.2
+starlette==0.14.2
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+uvicorn==0.14.0
+yarl==1.6.3
