Fix test-matrix, mypy, and bad backport
- test-matrix.yml was intepreting 3.10 as '3.1' via float
- mypy recently removed its built-in type stubs for many
  third-party libraries so now need to install 'types-requests'
- Backport of the ELASTIC_CLIENT_APIVERSIONING test case
  included '8' instead of '7'

--- a/.ci/test-matrix.yml
+++ b/.ci/test-matrix.yml
@@ -1,18 +1,18 @@
 STACK_VERSION:
-  - 7.x-SNAPSHOT
+  - 7.13-SNAPSHOT
 
 TEST_SUITE:
   - platinum
 
 PYTHON_VERSION:
-  - 2.7
-  - 3.4
-  - 3.5
-  - 3.6
-  - 3.7
-  - 3.8
-  - 3.9
-  - 3.10
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8"
+  - "3.9"
+  - "3.10"
 
 PYTHON_CONNECTION_CLASS:
   - Urllib3HttpConnection
