--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9]
         experimental: [false]
         include:
-          - python-version: 3.10.0-beta.2
+          - python-version: 3.10-dev
             experimental: true
 
     runs-on: ubuntu-latest
