Remove 'elasticsearch.helpers.test', switch to pytest

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -6,11 +6,7 @@ COPY dev-requirements.txt .
 RUN python -m pip install \
     -U --no-cache-dir \
     --disable-pip-version-check \
-    pip \
-    && python -m pip install \
-    --no-cache-dir \
-    --disable-pip-version-check \
-    -r dev-requirements.txt
+    nox -rdev-requirements.txt
 
 COPY . .
 RUN python -m pip install -e .
