--- a/.ci/jobs/elastic+elasticsearch-py+main.yml
+++ b/.ci/jobs/elastic+elasticsearch-py+main.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+elasticsearch-py+master
-    display-name: 'elastic / elasticsearch-py # master'
-    description: Testing the elasticsearch-py master branch.
+    name: elastic+elasticsearch-py+main
+    display-name: 'elastic / elasticsearch-py # main'
+    description: Testing the elasticsearch-py main branch.
     junit_results: "*-junit.xml"
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/master
+        default: refs/heads/main
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
