--- a/.ci/test-matrix.yml
+++ b/.ci/test-matrix.yml
@@ -1,5 +1,6 @@
 STACK_VERSION:
   - 7.x-SNAPSHOT
+  - 8.0.0-SNAPSHOT
 
 TEST_SUITE:
   - platinum
@@ -17,4 +18,15 @@ PYTHON_CONNECTION_CLASS:
   - Urllib3HttpConnection
   - RequestsHttpConnection
 
-exclude: ~
+exclude:
+  # TODO: Remove for 7.16 branch
+  - STACK_VERSION: 8.0.0-SNAPSHOT
+    PYTHON_VERSION: "3.4"
+  - STACK_VERSION: 8.0.0-SNAPSHOT
+    PYTHON_VERSION: "3.5"
+  - STACK_VERSION: 8.0.0-SNAPSHOT
+    PYTHON_VERSION: "3.6"
+  - STACK_VERSION: 8.0.0-SNAPSHOT
+    PYTHON_VERSION: "3.7"
+  - STACK_VERSION: 8.0.0-SNAPSHOT
+    PYTHON_VERSION: "3.8"
