Add tem-missing to pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,8 @@ junit_family=legacy
 
 [tool:isort]
 profile=black
+
+[report]
+exclude_lines=
+    raise NotImplementedError
+    raise NotImplementedError()
