--- a/setup.cfg
+++ b/setup.cfg
@@ -12,5 +12,4 @@ profile=black
 
 [report]
 exclude_lines=
-    raise NotImplementedError
-    raise NotImplementedError()
+    raise NotImplementedError*
