backport of term-missing on main

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,12 @@ ignore = E203, E266, E501, W503
 
 [tool:pytest]
 junit_family=legacy
+addopts = --cov-report=term-missing --cov=elasticsearch --cov-config=setup.cfg
 
 [tool:isort]
 profile=black
+
+[report]
+show_missing = True
+exclude_lines=
+    raise NotImplementedError*
