--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ ignore = E203, E266, E501, W503
 
 [tool:pytest]
 junit_family=legacy
-addopts = --cov-report=term-missing --cov=elasticsearch --cov-config=setup.cfg
+addopts = --cov-report=term-missing --cov=elasticsearch --cov-config=.coveragerc
 
 [tool:isort]
 profile=black
