Migrate all user documentation to elastic.co

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,5 @@ sphinx:
 python:
   version: 3.7
   install:
-    - method: pip
-      path: .
     - requirements: dev-requirements.txt
+    - path: .
