--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include CONTRIBUTING.md
 include LICENSE
 include MANIFEST.in
 include README.rst
+include NOTICE
+include CHANGELOG.md
 include setup.py
 recursive-include elasticsearch* py.typed *.pyi
 recursive-include docs/sphinx *
