--- a/.github/workflows/unified-release.yml
+++ b/.github/workflows/unified-release.yml
@@ -17,13 +17,10 @@ jobs:
   assemble:
     name: Assemble
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        stack_version: ['7.x-SNAPSHOT']
-
+    env:
+      STACK_VERSION: 7.17-SNAPSHOT
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - run: "./.ci/make.sh assemble ${{ matrix.stack_version }}"
-        name: Assemble ${{ matrix.stack_version }}
+      - name: "Assemble ${{ env.STACK_VERSION }}"
+        run: "./.ci/make.sh assemble ${{ env.STACK_VERSION }}"
