[7.17] Use major.minor-SNAPSHOT for STACK_VERSION

--- a/.github/workflows/unified-release.yml
+++ b/.github/workflows/unified-release.yml
@@ -18,7 +18,7 @@ jobs:
     name: Assemble
     runs-on: ubuntu-latest
     env:
-      STACK_VERSION: 7.17-SNAPSHOT
+      STACK_VERSION: "7.17-SNAPSHOT"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
