--- a/.github/workflows/unified-release.yml
+++ b/.github/workflows/unified-release.yml
@@ -17,7 +17,7 @@ jobs:
     name: Assemble
     runs-on: ubuntu-latest
     env:
-      STACK_VERSION: 8.1.0-SNAPSHOT
+      STACK_VERSION: "8.1-SNAPSHOT"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
