--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         experimental: [false]
         nox-session: [""]
         include:
-          - python-version: 3.11.0-beta.3
+          - python-version: 3.11-dev
             experimental: true
             nox-session: test-3.11
 
