--- a/.ci/jobs/elastic+elasticsearch-py+8.3.yml
+++ b/.ci/jobs/elastic+elasticsearch-py+8.3.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+elasticsearch-py+6.x
-    display-name: 'elastic / elasticsearch-py # 6.x'
-    description: Testing the elasticsearch-py 6.x branch.
+    name: elastic+elasticsearch-py+8.3
+    display-name: 'elastic / elasticsearch-py # 8.3'
+    description: Testing the elasticsearch-py 8.3 branch.
     junit_results: "*-junit.xml"
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/6.x
+        default: refs/heads/8.3
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
