add codegen code

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -12,7 +12,7 @@ ENV BUILDER_GROUP elastic
 RUN groupadd --system -g ${BUILDER_GID} ${BUILDER_GROUP} \
     && useradd --system --shell /bin/bash -u ${BUILDER_UID} -g ${BUILDER_GROUP} -d /var/lib/elastic -m elastic 1>/dev/null 2>/dev/null \
     && mkdir -p /code/elasticsearch-py && mkdir /code/elasticsearch-py/build \
-    && chown -R ${BUILDER_USER}:${BUILDER_GROUP} /code/elasticsearch-py
+    && chown -R ${BUILDER_USER}:${BUILDER_GROUP} /code/
 COPY --chown=$BUILDER_USER:$BUILDER_GROUP . .
 WORKDIR /code/elasticsearch-py
 USER ${BUILDER_USER}:${BUILDER_GROUP}
