--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,22 @@
 steps:
-  - label: ":python: Greetings"
-    command: "echo 'Hello, world!'"
+  - label: ":elasticsearch: :python: ES Python ({{ matrix.python }})"
+    agents:
+      provider: "gcp"
+    env:
+      PYTHON_VERSION: "{{ matrix.python }}"
+      TEST_SUITE: "platinum"
+      STACK_VERSION: 8.10.0-SNAPSHOT
+      PYTHON_CONNECTION_CLASS: "{{ matrix.connection }}"
+    matrix:
+      setup:
+        python:
+          - "3.6"
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+        connection:
+          - "urllib3"
+          - "requests"
+    command: ./.buildkite/run-tests
