--- a/.buildkite/Dockerfile
+++ b/.buildkite/Dockerfile
@@ -14,13 +14,7 @@ RUN groupadd --system -g ${BUILDER_GID} ${BUILDER_GROUP} \
     && useradd --system --shell /bin/bash -u ${BUILDER_UID} -g ${BUILDER_GROUP} -d /var/lib/elastic -m elastic 1>/dev/null 2>/dev/null \
     && mkdir -p /code/elasticsearch-py && mkdir /code/elasticsearch-py/build \
     && chown -R ${BUILDER_USER}:${BUILDER_GROUP} /code/
-COPY --chown=$BUILDER_USER:$BUILDER_GROUP . .
 WORKDIR /code/elasticsearch-py
 USER ${BUILDER_USER}:${BUILDER_GROUP}
-COPY dev-requirements.txt .
-RUN python -m pip install \
-    -U --no-cache-dir \
-    --disable-pip-version-check \
-    nox -rdev-requirements.txt
+RUN python -m pip install --disable-pip-version-check nox
 COPY --chown=$BUILDER_USER:$BUILDER_GROUP . .
-RUN python -m pip install -U -e .
