Switch Read the Docs configuration to build.os
https://blog.readthedocs.com/use-build-os-config/

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,11 @@
 version: 2
-sphinx:
-  configuration: docs/sphinx/conf.py
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3"
 
 python:
-  version: 3.7
   install:
     - requirements: dev-requirements.txt
     - path: .
