Remove more references to .ci

--- a/.gitignore
+++ b/.gitignore
@@ -143,5 +143,5 @@ cython_debug/
 # elasticsearch files
 test_elasticsearch/cover
 test_elasticsearch/local.py
-.ci/output
+.buildkite/output
 junit/
