--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
           python -m pip install nox
       - name: Run Tests
         shell: bash
-        run: .ci/run-nox.sh
+        run: .buildkite/run-nox.sh
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
           NOX_SESSION: ${{ matrix.nox-session }}
