--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,13 @@ jobs:
         with:
           python-version: 3.x
       - name: Install dependencies
-        run: |
-          python3 -m pip install nox
+        run: python3 -m pip install nox
       - name: Lint the code
         run: nox -s lint
-
+        env:
+          # Workaround for development versions of Python
+          # https://github.com/aio-libs/aiohttp/issues/7675
+          AIOHTTP_NO_EXTENSIONS: 1
   docs:
     runs-on: ubuntu-latest
     steps:
@@ -29,8 +31,7 @@ jobs:
         with:
           python-version: 3.x
       - name: Install dependencies
-        run: |
-          python3 -m pip install nox
+        run: python3 -m pip install nox
       - name: Build the docs
         run: nox -s docs
 
@@ -38,19 +39,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-        experimental: [false]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
         nox-session: [""]
         runs-on: ["ubuntu-latest"]
-        include:
-          - python-version: 3.11-dev
-            experimental: true
-            nox-session: test-3.11
-            runs-on: "ubuntu-latest"
 
     runs-on: ${{ matrix.runs-on }}
     name: test-${{ matrix.python-version }}
-    continue-on-error: ${{ matrix.experimental }}
+    continue-on-error: true
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -59,16 +54,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
-        run: |
-          python -m pip install nox
+        run: python -m pip install nox
       - name: Run Tests
         shell: bash
         run: .ci/run-nox.sh
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
           NOX_SESSION: ${{ matrix.nox-session }}
-          # TEMPORARY for 3.11
-          # https://github.com/aio-libs/aiohttp/issues/6600
+          # Workaround for development versions of Python
+          # https://github.com/aio-libs/aiohttp/issues/7675
           AIOHTTP_NO_EXTENSIONS: 1
           # https://github.com/aio-libs/frozenlist/issues/285
           FROZENLIST_NO_EXTENSIONS: 1
