Use asyncio_mode = auto to keep Python 3.6 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ ignore = E203, E266, E501, W503
 [tool:pytest]
 junit_family=legacy
 addopts = -vvv -p no:logging --cov-report=term-missing --cov=elasticsearch --cov-config=.coveragerc
+# When dropping Python 3.6 support, switch to strict mode
+asyncio_mode = auto
 
 [tool:isort]
 profile=black
