--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -19,4 +19,11 @@ steps:
         connection:
           - "urllib3"
           - "requests"
+      adjustments:
+        - with:
+            python: "3.7"
+            nox-session: "test_otel"
+        - with:
+            python: "3.12"
+            nox-session: "test_otel"
     command: ./.buildkite/run-tests
