Add nox session to label

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,5 @@
 steps:
-  - label: ":elasticsearch: :python: ES Python ({{ matrix.python }})"
+  - label: ":elasticsearch: :python: ES Python ({{ matrix.python }}) {{ matrix.nox_session }} "
     agents:
       provider: "gcp"
     env:
