--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ ignore = E203, E266, E501, W503
 [tool:pytest]
 junit_family=legacy
 addopts = -vvv --cov-report=term-missing --cov=elasticsearch --cov-config=.coveragerc
+markers = otel
 
 [tool:isort]
 profile=black
