--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,5 @@
 steps:
-  - label: ":elasticsearch: :python: ES Python ({{ matrix.python }})"
+  - label: ":elasticsearch: :python: ES Python ({{ matrix.python }}) {{ matrix.nox_session }} "
     agents:
       provider: "gcp"
     env:
@@ -7,6 +7,7 @@ steps:
       TEST_SUITE: "platinum"
       STACK_VERSION: "8.11.0-SNAPSHOT"
       PYTHON_CONNECTION_CLASS: "{{ matrix.connection }}"
+      NOX_SESSION: "{{ matrix.nox_session }}"
     matrix:
       setup:
         python:
@@ -19,4 +20,15 @@ steps:
         connection:
           - "urllib3"
           - "requests"
+        nox_session:
+          - "test"
+      adjustments:
+        - with:
+            python: "3.7"
+            connection: "urllib3"
+            nox_session: "test_otel"
+        - with:
+            python: "3.12"
+            connection: "urllib3"
+            nox_session: "test_otel"
     command: ./.buildkite/run-tests
