--- a/test_elasticsearch/test_server/test_vectorstore/docker-compose.yml
+++ b/test_elasticsearch/test_server/test_vectorstore/docker-compose.yml
@@ -18,6 +18,14 @@ services:
       interval: 10s
       retries: 60
 
+  # Currently fails on Mac: https://github.com/elastic/elasticsearch/issues/106206
+  elasticsearch-with-models:
+    image: docker.elastic.co/eland/eland
+    depends_on:
+      - elasticsearch
+    restart: no
+    command: sh -c "sleep 10 && eland_import_hub_model --url http://elasticsearch:9200 --hub-model-id sentence-transformers/msmarco-minilm-l-12-v3 --start"
+
   kibana:
     image: kibana:8.13.0
     environment:
